Started Calculus Heart

--- a/Math Concepts for Developers/Calculus/Exercise/Calculus Exercise.ipynb
+++ b/Math Concepts for Developers/Calculus/Exercise/Calculus Exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1364,6 +1364,50 @@
     "* Optional: Research how you can use EKG or pulse sensor data to measure oxygen in the blood. Have a look [here](https://www.quora.com/How-do-optical-heart-rate-sensors-work) for example\n",
     "* Optional: How can you use the pulse sensor data to measure stress levels? There are many approaches to this one.\n",
     "* Optional: Many diseases can be diagnosed from EKG data. Can you train an algorithm to recognize a certain disease? This is related to *time series* analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EKG and Calculus in Medicine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Abstract"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. EKG\n",
+    "\n",
+    "EKG is a recording of the electrical activity of the heart over time.\n",
+    "It is a 1-dimensional time series, where:\n",
+    "- The x-axis is time (usually seconds or milliseconds).\n",
+    "- The y-axis is voltage (millivolts, mV).\n",
+    "\n",
+    "The data comes from electrodes placed on the skin that detect tiny electrical changes resulting from depolarization and repolarization of cardiac muscle cells during each heartbeat.\n",
+    "\n",
+    "The heart is an electrically active organ:\n",
+    "- It contains pacemaker cells that generate electrical impulses automatically.\n",
+    "- These impulses travel through specialized pathways (like the AV node, bundle of His, Purkinje fibers), causing the heart muscle to contract and pump blood.\n",
+    "\n",
+    "The basic electrical events are:\n",
+    "- Depolarization: Heart muscle cells become electrically excited (positive ions enter cells), causing contraction.\n",
+    "- Repolarization: Cells return to their resting state (recovery phase).\n",
+    "\n",
+    "Each cardiac cycle (heartbeat) shows characteristic waves:\n",
+    "- P wave: Atrial depolarization (atria contract).\n",
+    "- PR interval: Time from atrial to ventricular depolarization (AV node delay).\n",
+    "- QRS complex: Ventricular depolarization (ventricles contract).\n",
+    "- ST segment: Time after ventricular contraction begins (should be flat).\n",
+    "- T wave: Ventricular repolarization (ventricles relax).\n",
+    "- QT interval: Total time for depolarization and repolarization of ventricles."
    ]
   },
   {
