Fixed a small typo

--- a/Data Science/Data Visualization. Exploratory Data Analysis/Data Visualization and EDA Lab.ipynb
+++ b/Data Science/Data Visualization. Exploratory Data Analysis/Data Visualization and EDA Lab.ipynb
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "id": "6bfca544-a5b2-40b1-9678-c4dbeff75423",
    "metadata": {},
    "outputs": [
@@ -1786,7 +1786,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "id": "a563eb1b-2ebe-4dac-a685-338897414530",
    "metadata": {},
    "outputs": [
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "id": "59378d66-792f-4c14-ae2a-0f8070ef83d2",
    "metadata": {},
    "outputs": [
@@ -1858,7 +1858,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "id": "e458a7f3-04d9-491e-9bd2-993b2d772d6f",
    "metadata": {},
    "outputs": [
@@ -1908,7 +1908,7 @@
    "id": "cc059ca2-ebf2-4209-a3e4-e9521f537c49",
    "metadata": {},
    "source": [
-    "The bar chart (again - preferable choice) above shows how many songs in our \"most streamed\" dataset were released in each month. May and January (both over 500 songs) lead the pack - spring and post-holiday release cycles appear strong. October, June and March also see high counts, lowest counts occur in December (unver 300 songs) and August (a little over 300 songs), likely due to holiday season focus and summer breaks."
+    "The bar chart (again - preferable choice) above shows how many songs in our \"most streamed\" dataset were released in each month. May and January (both over 500 songs) lead the pack - spring and post-holiday release cycles appear strong. October, June and March also see high counts, lowest counts occur in December (under 300 songs) and August (a little over 300 songs), likely due to holiday season focus and summer breaks."
    ]
   },
   {
