Started Working with Images - Exercise - Finished exercises 1, 2, 3 - Exploring images, filtering out and removing duplicates and loading a ready-made model for a CNN

--- a/Data Science/Working with Images/Working with Images Lab.ipynb
+++ b/Data Science/Working with Images/Working with Images Lab.ipynb
@@ -2,12 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "ecac9c20-e9eb-4b83-b9b3-edd1ec32d57a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your imports here"
+    "import os\n",
+    "import numpy as np\n",
+    "import hashlib\n",
+    "import torchvision.models as models\n",
+    "from torch import nn\n",
+    "from PIL import Image\n",
+    "from collections import Counter, defaultdict"
    ]
   },
   {
@@ -38,11 +44,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "72d6fbdb-37b4-4ce4-a3fa-65954c377539",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of cat types (species): 7\n",
+      "Species names: ['african-wildcat', 'blackfoot-cat', 'chinese-mountain-cat', 'domestic-cat', 'european-wildcat', 'jungle-cat', 'sand-cat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_path = \"data/\"\n",
+    "species = [d for d in os.listdir(dataset_path)]\n",
+    "\n",
+    "print(f\"Number of cat types (species): {len(species)}\")\n",
+    "print(\"Species names:\", species)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7d42c5d5-6291-485c-beed-7e7a9bc3eaf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "african-wildcat: 91 images\n",
+      "blackfoot-cat: 79 images\n",
+      "chinese-mountain-cat: 42 images\n",
+      "domestic-cat: 64 images\n",
+      "european-wildcat: 85 images\n",
+      "jungle-cat: 86 images\n",
+      "sand-cat: 73 images\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in species:\n",
+    "    folder = os.path.join(dataset_path, s)\n",
+    "    count = len([f for f in os.listdir(folder)])\n",
+    "    print(f\"{s}: {count} images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "757c1cf5-301d-47a3-a5db-56b28e2dc120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most common image size: (275, 183) (occurs 108 times)\n",
+      "Average image size: 406.55 x 310.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_sizes = []\n",
+    "\n",
+    "for s in species:\n",
+    "    folder = os.path.join(dataset_path, s)\n",
+    "    \n",
+    "    for fname in os.listdir(folder):\n",
+    "        path = os.path.join(folder, fname)\n",
+    "\n",
+    "        if fname.lower().endswith(('.jpg', '.jpeg', '.png')):\n",
+    "            with Image.open(path) as img:\n",
+    "                image_sizes.append(img.size)\n",
+    "\n",
+    "most_common_size = Counter(image_sizes).most_common(1)[0]\n",
+    "print(f\"Most common image size: {most_common_size[0]} (occurs {most_common_size[1]} times)\")\n",
+    "\n",
+    "widths, heights = zip(*image_sizes)\n",
+    "avg_width = sum(widths) / len(widths)\n",
+    "avg_height = sum(heights) / len(heights)\n",
+    "print(f\"Average image size: {avg_width:.2f} x {avg_height:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1489384-ba14-40dc-bbb0-3cba54ab09df",
+   "metadata": {},
+   "source": [
+    "Let's define outliers as images much smaller or much larger than typical (mean +- 2 * std)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1b96e2dd-b4aa-4600-bf7d-dbce8f6ba665",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 30 image size outliers:\n",
+      "Some outlier sizes: [(1500, 1038), (4000, 3000), (4000, 3000), (2048, 1365), (1644, 2598)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "widths_np_array = np.array(widths)\n",
+    "heights_np_array = np.array(heights)\n",
+    "\n",
+    "mean_widths, std_widths = widths_np_array.mean(), widths_np_array.std()\n",
+    "mean_heights, std_heights = heights_np_array.mean(), heights_np_array.std()\n",
+    "\n",
+    "outliers = [(w, h) for (w, h) in image_sizes if\n",
+    "            w < mean_widths - 2 * std_widths or w > mean_widths + 2 * std_widths or\n",
+    "            h < mean_heights - 2 * std_heights or h > mean_heights + 2 * std_heights]\n",
+    "\n",
+    "print(f\"Found {len(outliers)} image size outliers:\")\n",
+    "\n",
+    "if outliers:\n",
+    "    print(\"Some outlier sizes:\", outliers[:5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,11 +180,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "82a8920c-1237-488e-8267-c1f6cadbdb38",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_file_hash(path):\n",
+    "    \"\"\"\n",
+    "    Function to obtain file hash receiving a file\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    with open(path, 'rb') as f:\n",
+    "        return hashlib.md5(f.read()).hexdigest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f008e180-9da6-48ba-8fc1-dc531ee3c519",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hashes = defaultdict(list)\n",
+    "\n",
+    "for s in species:\n",
+    "    folder = os.path.join(dataset_path, s)\n",
+    "    \n",
+    "    for fname in os.listdir(folder):\n",
+    "        if fname.lower().endswith(('.jpg', '.jpeg', '.png')):\n",
+    "            path = os.path.join(folder, fname)\n",
+    "            file_hash = get_file_hash(path)\n",
+    "            hashes[file_hash].append(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5b99e7be-1e00-48c7-be6c-072487595a29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 15 groups of exact duplicates.\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicates = [paths for paths in hashes.values() if len(paths) > 1]\n",
+    "print(f\"Found {len(duplicates)} groups of exact duplicates.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "115a6c92-0967-4125-9d06-8ea23116226d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed: data/chinese-mountain-cat\\ch (10).jpg\n",
+      "Removed: data/chinese-mountain-cat\\ch (20).jpg\n",
+      "Removed: data/european-wildcat\\eu (13).jpg\n",
+      "Removed: data/european-wildcat\\eu (62).jpg\n",
+      "Removed: data/european-wildcat\\eu (15).jpg\n",
+      "Removed: data/european-wildcat\\eu (64).jpg\n",
+      "Removed: data/european-wildcat\\eu (17).jpg\n",
+      "Removed: data/european-wildcat\\eu (69).jpg\n",
+      "Removed: data/european-wildcat\\eu (18).jpg\n",
+      "Removed: data/european-wildcat\\eu (73).jpg\n",
+      "Removed: data/european-wildcat\\eu (22).jpg\n",
+      "Removed: data/european-wildcat\\eu (77).jpg\n",
+      "Removed: data/european-wildcat\\eu (24).jpg\n",
+      "Removed: data/european-wildcat\\eu (79).jpg\n",
+      "Removed: data/european-wildcat\\eu (25).jpg\n",
+      "Removed: data/european-wildcat\\eu (85).jpg\n",
+      "Removed: data/european-wildcat\\eu (26).jpg\n",
+      "Removed: data/european-wildcat\\eu (3).jpg\n",
+      "Removed: data/european-wildcat\\eu (27).jpg\n",
+      "Removed: data/european-wildcat\\eu (5).jpg\n",
+      "Removed: data/european-wildcat\\eu (32).jpg\n",
+      "Removed: data/european-wildcat\\eu (7).jpg\n",
+      "Removed: data/european-wildcat\\eu (35).jpg\n",
+      "Removed: data/european-wildcat\\eu (9).jpg\n",
+      "Removed: data/european-wildcat\\eu (50).jpg\n",
+      "Removed: data/european-wildcat\\eu (74).jpg\n",
+      "Removed: data/european-wildcat\\eu (53).jpg\n",
+      "Removed: data/european-wildcat\\eu (75).jpg\n",
+      "Removed: data/european-wildcat\\eu (54).jpg\n",
+      "Removed: data/european-wildcat\\eu (83).jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "for group in duplicates:\n",
+    "    for dup in group:\n",
+    "        os.remove(dup)\n",
+    "        print(f\"Removed: {dup}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe06aa81-8a52-4fc4-8553-af7353b1c0d4",
+   "metadata": {},
+   "source": [
+    "I used MD5 file hashing to detect and remove duplicate images. This method works well for exact file duplicates, where the image content and encoding are identical. However, it may miss visually identical images that differ in compression or format. I could use perceptual hashing (like imagehash.phash()), which compares visual content rather than file bytes."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,11 +303,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c7d40ed-2f0e-42ea-82cc-e3427c84d061",
+   "execution_count": 25,
+   "id": "98893e8c-0a0d-401e-8325-f2683bccd386",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total parameters: 25,557,032\n",
+      "Total main layers: 54\n"
+     ]
+    }
+   ],
+   "source": [
+    "resnet = models.resnet50()\n",
+    "\n",
+    "total_params = sum(p.numel() for p in resnet.parameters())\n",
+    "main_layers = [m for m in resnet.modules() if isinstance(m, (nn.Conv2d, nn.Linear))]\n",
+    "\n",
+    "print(f\"Total parameters: {total_params:,}\")\n",
+    "# We need to count only layers with weights (Conv2d, Linear) -> main layers\n",
+    "print(f\"Total main layers: {len(main_layers)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
